--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Virbnb</title>
   </head>
   <body>
+    <script type="text/javascript" src="//delivery.r2b2.io/get/virbnb.vercel.app/generic/sticky"></script>
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
