--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <script type="text/javascript" src="//delivery.r2b2.io/get/virbnb.vercel.app/generic/sticky"></script>
+    <script type="text/javascript" src="//delivery.r2b2.io/get/virbnb.vercel.app/generic/sticky/mobile"></script>
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
